# juce-webview-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: cmake.yml
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/JuceWebViewTutorial/: ParameterIDs.hpp  PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/: package-lock.json  package.json
plugin/ui/public/: index.html
plugin/ui/public/js/: index.js
scripts/: DownloadWebView2.ps1
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
